fdo#60922 ignore DOCX import of w:position w:val="0"

Change-Id: I10e9c0f1078e36710335a9a48f7f02292c764795